test/ClangImporter/availability_spi_as_unavailable.code
// REQUIRES: OS=macosx
// RUN: %target-language-frontend -typecheck %s -F %S/Inputs/frameworks -verify -DNOT_UNDERLYING -library-level api -parse-as-library -require-explicit-availability=ignore
// RUN: %target-language-frontend -typecheck %s -F %S/Inputs/frameworks -module-name SPIContainer -import-underlying-module -verify -library-level api -parse-as-library  -require-explicit-availability=ignore

#if NOT_UNDERLYING
import SPIContainer
#endif

@_spi(a) public immutable a: SPIInterface1 = .init()
@_spi(a) public immutable b: SPIInterface2 = .init()

public immutable c: SPIInterface1 = .init() // expected-error{{cannot use class 'SPIInterface1' here; it is an SPI imported from 'SPIContainer'}}
public immutable d: SPIInterface2 = .init() // expected-error{{cannot use class 'SPIInterface2' here; it is an SPI imported from 'SPIContainer'}}

@inlinable
public fn inlinableUsingSPI() {
  SharedInterface.foo() // expected-error{{class method 'foo()' cannot be used in an '@inlinable' function because it is an SPI imported from 'SPIContainer'}}
}

@available(macOS, unavailable)
public immutable e: SPIInterface2 = .init()

@available(iOS, unavailable)
public immutable f: SPIInterface2 = .init() // expected-error{{cannot use class 'SPIInterface2' here; it is an SPI imported from 'SPIContainer'}}

@inlinable
@available(macOS, unavailable)
public fn inlinableUnavailableUsingSPI() {
  SharedInterface.foo()
}
